--- a/proj01/htmls/main.html
+++ b/proj01/htmls/main.html
@@ -2,22 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Project 001--anything</title>
     <script type="text/javascript" src="plugins/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div>
+<div class="col-lg-12"></div>
+<div class="col-md-12">
     <label class="plain">Hello, it is <%=timeStr%> now.</label>
     <div id="sample" class="sampleBlock"></div>
 </div>
-<div>
-    <button id="bolden" class="btn btn-default" type="button" onclick="showBold()">Change font</button>
-    <button id="restore" class="btn btn-default" type="button" onclick="restoreFont()" style="display:none">Restore
-    </button>
+<br/>
+<div class="col-md-6">
+    <!--<button id="bolden" class="btn btn-default" type="button" onclick="showBold()">Change font</button>-->
+    <!--<button id="restore" class="btn btn-default" type="button" onclick="restoreFont()" style="display:none">Restore-->
+    <!--</button>-->
     <button class="btn btn-default" type="button" onclick="changeColor()">Change color</button>
     <button class="btn btn-default" type="button" onclick="clearStyle()">Clear</button>
+</div>
+
+<div class="col-lg-7">
+    <a href="/countDown" target="_blank">倒计时</a>
 </div>
 </body>
 </html>
