--- a/proj01/htmls/main.html
+++ b/proj01/htmls/main.html
@@ -9,6 +9,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<% include ./include/header.html %>
+
 <div class="col-lg-12"></div>
 <div class="col-md-12">
     <label class="plain">Hello, it is <%=timeStr%> now.</label>
